Develop 1.1 -> main (#227)
* entity commit

* entity commit

* chore : 엔티티 추가
userEntity 추가

* chore : gradle 추가
build.gradle 설정 추가

* chore : Create application.yml

* feat : 회원 가입 기능 구현

- 아이디, 닉네임, 이메일 중복 검사
- 이메일 인증 (SMTP)

* test : 회원 가입 기능 테스트

* chore : Entity 이름 수정

* feat : 게임 개설자 기능 추가
게임 개설자 게임 개설, 수정, 삭제 추가

* refactor : import 정리
import 정리

* refactor : PR 리뷰 반영
 - UserController.java : 로그 어노테이션 삭제
 - Gender, Ability, PlayStyle 타입 추가로 인한 수정 : UserEntity.java, UserDto.java, UserService.java
 - UserRepository.java : Optional 적용

* refactor : PR 리뷰 반영
 - UserEntity.java : 생일 LocalDate 형식으로 수정
 - UserDto.java : Entity 타입 수정으로 생일 Validation 수정

* fix : JwtFilter 파일 누락에 따른 설정 수정

* fix : 순환 참조 및 패키지 구조 변경

config : 공용으로 사용하게 되는 환경설정의 경우 기존 users 패키지에 있던 부분에서 상위 패키지 config로 이동
-> RedisConfig, SwaggerConfig, WebSecurityConfig
-> + JpaAuditingConfiguration 추가

entity : UserEntity 스프링 security UserDetails 상속
-> + BlackListUserEntity 추가

exception : 공용 exception -> user 패키지에서 공용으로 사용할 수 있게 상위 패키지로 이동

security : JwtAuthenticationFilter , TokenProvider 해당 폴더로 경로 변경

* feat : 경기 개설자
경기 생성, 수정, 삭제 구현

* refactor : PR 리뷰 반영
 - ParticipantGameEntity.java : DateTime 으로 변경
 - GameEntity.java : 변수명 DateTime 으로 변경
 - GameCreatorService 삭제 후 GameService로 변경
 - gameEntity.setUserEntity(user); 삭제
 - GameService.java : 주석 내용 보완

* chore : H2 data.sql 모의 회원 데이터 생성

* chore : 변수명 변경 + jpa 인자 변경

UserDto
- getCreateDate -> getCreateDateTime

UserRepository
- Integer -> Long

* chore : 환경 설정 및 에러코드 추가

1. 로그인 개발 전 까지 "/report/user", url 허용
2. default errocode -> null 수정 -> ErrorCode.INTERNAL_SERVER_ERROR;

* feat : 신고하기 기능

1. 현재 유효성 및 회원 존재 유무는 email 값으로 진행
2. 로그인 기능이 완성 되면 컨트롤러 Role 테스트 및 수정 필요

* test : Report 서비스 테스트

컨트롤러 테스트는 추후 로그인 기능 완성된 후 진행 예정

* chore : 변수명 수정 및 ErrorCode 추가

* chore : 변수명 변경 user_id -> userId / reported_id -> reportedId

* chore : @NotNull 중복 유효성 제거

* feat : 로그인